# llmcall

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-publish.yml  release.yml  semantic-release.yml  tests.yml
docs/: index.md  usage.ipynb
llmcall/: __init__.py  core.py  extract.py  extract_utils.py  generate.py  llmcall.py
tests/: conftest.py  test_async.py  test_exctract.py  test_extract.py  test_generate.py  test_integration.py  test_multimodal_extract.py
