[tool.poetry]
name = "llmcall"
version = "0.1.0rc1"
description = "A lite abstraction layer for LLM calls"
authors = ["Ndamulelo Nemakhavhani <info@rihonegroup.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["llm", "ai", "litellm", "structure-outputs", "openai", "pydantic"]
repository = "https://github.com/rihoneailabs/llmcall.git"
homepage = "https://github.com/rihoneailabs/llmcall"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
litellm = "^1.82.2"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
openai = "^2.28.0"
environs = "^14.6.0"
tenacity = "^9.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "tox (>=4.49.1,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
