[tool.poetry]
name = "llmcall"
version = "1.0.0"
description = "A lite abstraction layer for LLM calls"
authors = ["Ndamulelo Nemakhavhani <hello@ndamulelo.co.za>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["llm", "ai", "litellm", "structure-outputs", "openai", "pydantic"]
repository = "https://github.com/rihoneailabs/llmcall.git"
homepage = "https://github.com/rihoneailabs/llmcall"
documentation = "https://github.com/rihoneailabs/llmcall/tree/main/docs"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
litellm = "^1.89.2"
pydantic = "^2.12.5"
pydantic-settings = "^2.14.2"
tenacity = "^9.1.4"
urllib3 = "^2.7.0"
idna = "^3.18"
python-dotenv = "^1.2.2"
aiohttp = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.0,<1.0.0)",
    "tox (>=4.49.1,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "python-semantic-release (>=10.5.3,<11.0.0)"
]

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = "poetry build"
commit_message = "chore(release): {version} [skip ci]\n\nAutomatically generated by python-semantic-release"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
